--- a/TP_W24/Views/Categories/Edit.cshtml
+++ b/TP_W24/Views/Categories/Edit.cshtml
@@ -4,41 +4,49 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<section id="blog-banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <div class="blog-icon">
+                    <i class="fa fa-btc fa-4x"></i>
+                </div>
+                <div class="blog-title">
+                    <h1>Modifier</h1>
+                </div>
+
+            </div>     <!-- End col-lg-12 -->
+        </div>	    <!-- End row -->
+    </div>       <!-- End container -->
+</section>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Categories", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+    <input type="hidden" value="@ViewBag.ImgPath" name="ImgPath" />
+    <input type="hidden" value="@ViewBag.ImgID" name="ImgID" />
     <div class="form-horizontal">
-        <h4>Categorie</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Categorie_ID)
-
         <div class="form-group">
-            @Html.LabelFor(model => model.CategorieName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <center><h4>Nom De Catégories</h4></center>
+            <div class="col-md-8 col-md-offset-2">
                 @Html.EditorFor(model => model.CategorieName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategorieName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CategorieDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CategorieDescription, new { htmlAttributes = new { @class = "form-control" } })
+            <h4 class="control-label col-md-2">Description de la Catégorie</h4>
+            <div class="col-md-8">
+                @Html.TextAreaFor(model => model.CategorieDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategorieDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Categorie_Path_Img, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Categorie_Path_Img, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Categorie_Path_Img, "", new { @class = "text-danger" })
-            </div>
+        <div class="col-md-offset-2 col-md-10">
+            <label for="file">Changer l'Image:</label>
+            <input type="file" value="@ViewBag.ImgPath" name="fileIMG" id="file" /><br><br>
         </div>
 
         <div class="form-group">
@@ -48,10 +56,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
