--- a/TP_W24/Views/Posts/Create.cshtml
+++ b/TP_W24/Views/Posts/Create.cshtml
@@ -23,12 +23,12 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "Champs Incorect", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-8 col-md-offset-2">
                 <center><h5>Titre</h5></center>
                 @Html.EditorFor(model => model.Post_Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Post_Name, "Titre Incorrect", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Post_Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -48,9 +48,6 @@
 
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
